# minifmm

./: .gitignore  README.md
cilk/: Makefile  traversal.cpp
cmake/: preventBuildInSource.cmake
cuda/: Makefile  README.md
kokkos-cpu/: .gitignore  CMakeLists.txt  Makefile  README.md  kernels.cpp  kokkos  readme_build_error
kokkos-gpu/: CMakeLists.txt  Makefile  README.md  scheduler.hpp
omp/: traversal.cpp
omp-atomics/: Makefile  kernels.cpp  traversal.cpp
omp-locks/: Makefile  kernels.cpp  type.cpp  type_float.h
omp-task-depend/: traversal.cpp
ref/: Makefile  initialise.cpp  kernels.cpp  main.cpp  params.h  spharm.cpp  timer.h  traversal.cpp  type.h  type_double.h  type_float.h  verify.cpp
tbb/: Makefile  traversal.cpp
